# rag-math-tutor

./: .gitignore  README.md  docker-compose.yaml  setup.py
api/: Dockerfile  pyproject.toml
api/src/: entrypoint.sh  main.py
api/src/agents/: math_agent.py  test.ipynb
api/src/chains/: math_chain.py
api/src/data_load/: knowledge_base.py
api/src/models/: math_api_models.py
data/: Tutor_Evaluation_Dataset.csv
ui/: pyproject.toml
ui/src/: main.py
