[project]
name = "chatbot_api"
version = "0.1"
dependencies = [
    "asyncio==3.4.3",
    "fastapi==0.115.0",
    "langchain==0.3.14",
    "langchain-community==0.3.14",
    "langchain-openai==0.2.14",
    "langchainhub==0.1.14",
    "neo4j==5.14.1",
    "numpy==1.26.2",
    "openai==1.58.1",
    "opentelemetry-api==1.22.0",
    "pydantic==2.7.4",
    "uvicorn==0.25.0",
    "pypdf==5.1.0",
    "faiss-cpu==1.9.0.post1",
    "langgraph==0.2.61",
    "langchain-chroma==0.1.4"
]

[project.optional-dependencies]
dev = ["black", "flake8"]

